WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209939
Color Form Control does not come up on second selection in macCatalyst
https://bugs.webkit.org/show_bug.cgi?id=209939
Summary
Color Form Control does not come up on second selection in macCatalyst
Megan Gardner
Reported
2020-04-02 16:47:59 PDT
Color Form Control does not come up on second selection
Attachments
Patch
(1.43 KB, patch)
2020-04-02 16:51 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2020-04-02 16:51:04 PDT
Created
attachment 395324
[details]
Patch
Megan Gardner
Comment 2
2020-04-03 11:05:19 PDT
<
rdar://problem/61131345
>
EWS
Comment 3
2020-04-03 11:06:58 PDT
Committed
r259476
: <
https://trac.webkit.org/changeset/259476
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395324
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug