Color Form Control does not come up on second selection in macCatalyst https://bugs.webkit.org/show_bug.cgi?id=209939 <rdar://problem/61131345>

Reviewed by Wenson Hsieh.

On selection and manual dismissal of the form, we need to also call accessoryDone,
as the UIKit callbacks are not called on manual dismissal.

* UIProcess/ios/forms/WKFormColorPicker.mm:
(-[WKColorPicker colorMatrixView:didTapColorButton:]):


Canonical link: https://commits.webkit.org/222894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259476 268f45cc-cd09-0410-ab3c-d52691b4dbfc